@@ -1,3 +1,14 @@
+2012-12-03  Peter Rybin  <prybin@chromium.org>
+
+        Web Inspector: make ASSERTION FAILED: foundPropertiesCount == object->size() more useful
+        https://bugs.webkit.org/show_bug.cgi?id=103254
+
+        Reviewed by Pavel Feldman.
+
+        Assert code generation is slightly changed so that it dumped JSON object text before crashing.
+
+        * inspector/CodeGeneratorInspector.py:
+
 2012-12-03  Max Vujovic  <mvujovic@adobe.com>
 
         [CSS Shaders] Do not clamp indirect array indices during CSS Shaders ANGLE validation pass
